Added and styled main element

--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
         <a href="#"><button class="second-cta">Sign up</button></a>
     </div>
  </nav>
+
+  <main>
+        <div class="hero-text">
+        <h1>
+            The Banking App <br> For  Africans
+        </h1>
+
+        <h2>
+            Your One Stop For All Your Banking Needs
+        </h2>
+
+        <p>
+            Save, spend, recieve and send <br> money all in one place
+        </p>
+
+        <div class="hero-cta">
+            <a href="#"><button class="first-cta">Download App</button></a>
+            <a href="#"><button class="second-cta">Sign Up</button></a>
+        </div>
+        </div>
+        <div class="hero-image">
+            <img src="images/iPhone 14 Pro Space Black Mockup label.png" alt="phone mockup">
+        </div>
+    </main>
+
 </body>
 <script src="index.js"></script>
 </html>
