Created new section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
             The Banking App <br> For  Africans
         </h1>
 
-        <h2>
-            Your One Stop For All Your Banking Needs
-        </h2>
-
         <p>
-            Save, spend, recieve and send <br> money all in one place
+            Your One Stop For All Your Banking Needs.Save, spend, recieve and send <br> money all in one place.
         </p>
 
         <div class="hero-cta">
@@ -66,6 +62,20 @@
         </div>
     </main>
 
+    <section class="section-one js-scroll">
+        <div class="section-one-images">
+            <img src="images/Frame 69.png" alt="">
+            <img src="images/Frame 70.png" alt="">
+        </div>
+        <div class="section-one-text">
+            <h2>
+                Finally cultivate that  habit <br> of saving
+            </h2>
+            <p>
+                Save up for occasions like a <br> birthday, or just have spare cash <br> for emergencies
+            </p>
+        </div>
+    </section>
 </body>
 <script src="index.js"></script>
 </html>
