--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             </p>
         </div>
     </section>
+
+    <section class="section-two js-scroll">
+        
+    </section>
 </body>
 <script src="index.js"></script>
 </html>
