--- a/index.html
+++ b/index.html
@@ -77,8 +77,55 @@
         </div>
     </section>
 
-    <section class="section-two js-scroll">
-        
+    <section class="section-two">
+        <div class="section-two-text">
+             <h2>
+                Effortlessly pay bills
+            </h2>
+            <p>
+                Save up for occasions like a <br> birthday, or just have spare cash <br> for emergencies
+            </p>
+        </div>
+
+        <div class="section-two-images">
+            <div class="first-flex-row">
+                <img src="images/Frame 109.png" alt="">
+                <img src="images/Frame 110.png" alt="">
+            </div>
+            <div class="second-flex-row">
+                <img src="images/Frame 111.png" alt="">
+                <img src="images/Frame 112.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="section-three">
+        <div class="section-three-image">
+        <img src="images/main.png" alt="">
+        </div>
+
+        <div class="section-three-text">
+            <h2>
+                Companion app
+            </h2>
+
+            <p>
+                Loop comes with a desktop version companion app  for  whenever  your  on the go or if you  just  like looking at your balance <br>  on larger screens.
+            </p>
+        </div>
+    </section>
+
+    <section class="section-four">
+       <div class="section-four-images">
+        <img src="images/Frame 140.png" alt="">
+        <img src="images/Frame 141.png" alt="">
+        <img src="images/Frame 142.png" alt="">
+       </div>
+
+       <div class="section-four-cta">
+      <a href="#"><button class="first-cta">Sign in</button></a>
+      <a href="#"><button class="second-cta">Sign up</button></a>
+       </div>
     </section>
 </body>
 <script src="index.js"></script>
