--- a/index.html
+++ b/index.html
@@ -127,6 +127,69 @@
       <a href="#"><button class="second-cta">Sign up</button></a>
        </div>
     </section>
+
+    <footer>
+        <div>
+            <a href="#"><img src="images/icons8-infinity-64.png" alt="Infinity logo" class="logo"></a>
+
+            <select name="languages" id="lang">
+                <option value="English">
+                    English
+                </option>
+
+                 <option value="French">
+                    French
+                </option>
+
+                 <option value="Spanish">
+                    Spanish
+                </option>
+
+                 <option value="Portugese">
+                    Portugese
+                </option>
+
+                 <option value="German">
+                    German
+                </option>
+            </select>
+
+            <a href="#">Download app</a>
+
+            <div class="download-links">
+                <a href="#"> <img src="images/icons8-google-play.svg" alt="Play store logo"> </a>
+               <a href="#"> <img src="images/icons8-apple-logo.svg" alt="App store logo"> </a>
+            </div>
+        </div>
+        <div>
+            <h3>
+                Company
+            </h3>
+            <a href="#">About us</a>
+            <a href="#">Media</a>
+            <a href="#">Careers</a>
+            <a href="#">Blog</a>
+            <a href="#">Customers</a>
+        </div>
+        <div>
+             <h3>
+                Features
+            </h3>
+            <a href="#">Loop account</a>
+            <a href="#">Payments</a>
+            <a href="#">Investments</a>
+            <a href="#">Credit report</a> 
+        </div>
+          <div>
+             <h3>
+                Help
+            </h3>
+            <a href="#">FAQ</a>
+            <a href="#">Knowledge base</a>
+            <a href="#">Contact</a>
+            <a href="#">Community</a> 
+        </div>
+    </footer>
 </body>
 <script src="index.js"></script>
 </html>
